# Real-Time-Motion-Classification-System

Multi_Sensor_System/: .Makefile.un~  .classifiers.c.un~  .classifiers.h.un~  .consumer.c.un~  .features_2.c.un~  .main.c.un~  .test_neural_network.c.un~  CMakeLists.txt  Comm_Test_neural_network.c  Makefile~  classifiers.c  classifiers.c~  classifiers.h  classifiers.h~  client_filename_list.txt  constants.c  constants.h  consumer  consumer.c  consumer.c~  continuous_data.c  data_only.c  edison_data.c  features_2.c  features_2.c~  last_functions.c  main  main.c  main.c~  main_2.c  main~  match_strides.c  mock_train_data.c  neural_network.h  neural_network.h~  process_testing_data.c~  producer  producer.c  save.c  strides_2.c  (+9 more)
Save_Simple_System/: CMakeLists.txt  LSM9DS0.c  Makefile  classifiers.c  classifiers.h  collect_training_data.c  collection.c  constants.c  constants.h  consumer.c  do_not_use_file.c  features.c  last_functions.c  main.c  neural_network.h  output  prompt_collect.c  run_cons_prod.sh  strides.c  test_neural_network.c  time_features.c  training_file.c  trial_consumer.c  turning_file.c
